[level 2] Title: 프로세스, Time: 3.03 ms, Memory: 74.3 MB -BaekjoonHub